--- a/kontakt.html
+++ b/kontakt.html
@@ -15,15 +15,20 @@
 
     <div>
         <h2>Kontakta mig!</h2>
-        <div>
+        <div class="info">
             <img src="Bilder/Jag.jpg" class="jag">
-            <p>asd</p>
+            <div class="paragraf">
+                <p>Telefon: 0720175949</p>
+                <p>Adress: Breviks Ängar 3</p>
+                <p>Mail: nils.bd.12@gmail.com</p>
+                <p>Discord: nisse#2540</p>
+            </div>
         </div>
     </div>
 
     <hr></hr>
     <footer>
-
+        <h1>Terms of service</h1>
     </footer>
 </body>
 </html>
