--- a/om-oss.html
+++ b/om-oss.html
@@ -13,10 +13,15 @@
         <a href="kontakt.html">Kontakt</a>
     </div>
 
+    <div class="fakta">
+        <p>
+            Vi är här för att hjälpa elever i magi och har varit en ledande resurs för trollkarl sedan 2011. Våra gratisvideor lär ut ett stort utbud av korthanteringsförmåga, knep, handfull och blomstrar. Vi erbjuder också träningskurser för mer dedikerade studenter och har ett samlat urval av produkter, allt från spelkort, gimmicks och andra tillbehör.
+        </p>
+    </div>
 
     <hr></hr>
     <footer>
-
+        <h1>Terms of service</h1>
     </footer>
 </body>
 </html>
