--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1>Kolla in våra produkter!</h1>
         </a>
     </div>
-    <div class="container">
-            <img src="Bilder/1.png" class="item">
+    <div class="container"> <!--Lägger in alla bilder i en container-->
+            <img src="Bilder/1.png" class="item"> <!--gör bildera till så kallade "childs"-->
             <img src="Bilder/2.png" class="item">
             <img src="Bilder/3.png" class="item">
             <img src="Bilder/4.png" class="item">
@@ -38,7 +38,7 @@
     </div>
     <hr></hr>
     <footer>
-        <h1>korv</h1>
+        <h1>Terms of service</h1>
     </footer>
 
     
